<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/salat"
    android:id="@+id/salatView">    
<TextView android:layout_width="fill_parent"
          android:layout_height="0dip" 
		  android:layout_weight="15"
          android:id="@+id/dummy1">
</TextView>
<TextView android:text="@string/date1" 
          android:layout_width="fill_parent"
          android:layout_height="0dip" 
		  android:layout_weight="12"
		  android:layout_marginLeft="15dp"
          android:textSize="15sp"
          android:textColor="#fff" 
          android:id="@+id/date1Text">
</TextView>
<TextView android:text="@string/fajr" 
          android:layout_width="fill_parent"
          android:layout_height="0dip" 
          android:layout_weight="9"
          android:layout_marginLeft="200dp"
          android:textSize="35sp"
          android:textStyle="bold"
          android:textColor="#fff" 
          android:id="@+id/fajrText">
</TextView>
<TextView android:text="@string/duhr" 
          android:layout_width="fill_parent"
          android:layout_height="0dip" 
          android:layout_weight="10"
          android:layout_marginLeft="200dp"
          android:textSize="35sp"
          android:textStyle="bold"
          android:textColor="#fff"
          android:id="@+id/duhrText">
</TextView>
<TextView android:text="@string/asr" 
          android:layout_width="fill_parent"
          android:layout_height="0dip" 
          android:layout_weight="10"
          android:layout_marginLeft="200dp"
          android:textSize="35sp"
          android:textStyle="bold"
          android:textColor="#fff"
          android:id="@+id/asrText">
</TextView>
<TextView android:text="@string/maghrib" 
          android:layout_width="fill_parent"
          android:layout_height="0dip" 
          android:layout_weight="10"
          android:layout_marginLeft="200dp"
          android:textSize="35sp"
          android:textStyle="bold"
          android:textColor="#fff"
          android:id="@+id/maghribText">
</TextView>
<TextView android:text="@string/isha" 
          android:layout_width="fill_parent"
          android:layout_height="0dip" 
          android:layout_weight="10"
          android:layout_marginLeft="200dp"
          android:textSize="35sp"
          android:textStyle="bold"
          android:textColor="#fff"
          android:id="@+id/ishaText">
</TextView>
<TextView android:layout_width="fill_parent"
          android:layout_height="0dip" 
		  android:layout_weight="1"
          android:id="@+id/dummy2">
</TextView>
<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="0dip" 
			android:layout_weight="9"
            android:orientation="horizontal" >
    <TextView
                android:id="@+id/shouroukText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shourouk"
                android:layout_marginLeft="80dp"
                android:textSize="10sp" 
                android:textColor="#fff"
			    android:gravity="center"/>

            <TextView
                android:id="@+id/locationText"
                android:layout_width = "fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cityCountry"
                android:textSize="20sp" 
                android:textColor="#fff"
			    android:gravity="right"/>
<!--
	<TextView android:text="@string/shourouk" 
			  android:layout_width="fill_parent"
			  android:layout_height="0dip" 
			  android:layout_weight="5"
			  android:layout_marginLeft="20dp"
			  android:textSize="10sp"
			  android:textColor="#fff"
			  android:id="@+id/shouroukText">
	</TextView>
	<TextView android:text="@string/cityCountry"
			  android:layout_width="fill_parent"
			  android:layout_height="0dip" 
			  android:layout_weight="15"
			  android:textSize="10sp"
			  android:textColor="#fff"
			  android:gravity="center"
			  android:id="@+id/locationText">
	</TextView>
-->
</LinearLayout>
</LinearLayout>
