<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/widget419"	android:layout_width="match_parent"	android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/bg">
<LinearLayout android:id="@+id/widget428" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true">
	<Button android:text="@string/detectLocation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/detectLocation"/>
	<Button android:text="@string/saveSettings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/saveSettings"/>
</LinearLayout>
<LinearLayout android:id="@+id/widget420"	android:layout_width="match_parent"	android:layout_height="wrap_content" android:orientation="vertical"	android:layout_alignParentTop="true" android:layout_alignParentLeft="true">
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_gravity="left|center_vertical" android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_gravity="left|center_vertical" android:layout_weight="1" android:text="@string/titleSettings" 
			android:textSize="20sp"
			android:textStyle="bold"
			android:textColor="#FFFFFF"
			android:paddingLeft="3px"/>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:layout_width="0dp" android:layout_height="wrap_content" android:layout_gravity="left|center_vertical" android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:paddingLeft="3px" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/titleCalculation" android:layout_gravity="left|center_vertical" android:layout_weight="1" />
		<Spinner android:id="@+id/calculation" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:layout_width="0dp" android:layout_gravity="right" android:layout_weight="1"
        android:entries="@array/calculation" android:entryValues="@array/calculationValues"/>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:paddingLeft="3px" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/titleAsr" android:layout_gravity="left|center_vertical" android:layout_weight="1" />
		<Spinner android:id="@+id/asr" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:layout_width="0dp" android:layout_gravity="right" android:layout_weight="1"
        android:entries="@array/asr" android:entryValues="@array/asrValues"/>
    </LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:paddingLeft="3px" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/titleHighLatitudes" android:layout_gravity="left|center_vertical" android:layout_weight="1" />
		<Spinner android:id="@+id/highLatitudes" android:layout_height="wrap_content" android:drawSelectorOnTop="true" android:layout_width="0dp" android:layout_gravity="right" android:layout_weight="1"
        android:entries="@array/highLatitudes" android:entryValues="@array/highLatitudesValues"/>
    </LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:paddingLeft="3px" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/titleLatitude" android:layout_gravity="left|center_vertical" android:layout_weight="1" /> 
		<EditText android:id="@+id/latitude" android:layout_width="0dp" android:layout_height="wrap_content" android:inputType="numberDecimal|numberSigned" android:layout_gravity="right" android:layout_weight="1" /> 
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:paddingLeft="3px" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/titleLongitude" android:layout_gravity="left|center_vertical" android:layout_weight="1" /> 
		<EditText android:id="@+id/longitude" android:layout_width="0dp" android:layout_height="wrap_content" android:inputType="numberDecimal|numberSigned" android:layout_gravity="right" android:layout_weight="1" /> 
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:paddingLeft="3px" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/titleTimezone" android:layout_gravity="left|center_vertical" android:layout_weight="1" /> 
		<EditText android:id="@+id/timezone" android:layout_width="0dp" android:layout_height="wrap_content" android:inputType="numberDecimal|numberSigned" android:layout_gravity="right" android:layout_weight="1" /> 
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:paddingLeft="3px" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/titleCity" android:layout_gravity="left|center_vertical" android:layout_weight="1" /> 
		<EditText android:id="@+id/city" android:layout_width="0dp" android:layout_height="wrap_content" android:inputType="text" android:layout_gravity="right" android:layout_weight="1" /> 
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:paddingLeft="3px" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/titleCountry" android:layout_gravity="left|center_vertical" android:layout_weight="1" /> 
		<EditText android:id="@+id/country" android:layout_width="0dp" android:layout_height="wrap_content" android:inputType="text" android:layout_gravity="right" android:layout_weight="1" /> 
	</LinearLayout>
</LinearLayout>
</RelativeLayout>
